ChangeLog of JSch
====================================================================
Last modified: Fri Jul 16 08:06:27 UTC 2010

	
Changes since version 0.1.42:
- bugfix: the remote window size must be in unsigned int.  FIXED.
- bugfix: support for EBCDIC environment.  FIXED.
- bugfix: data may be written to the closed channel.  FIXED.
- bugfix: NPE in closing channels.  FIXED.
- bugfix: the private key file may include garbage data before its header.  FIXED.
- bugfix: the session down may not be detected during the re-keying process.  FIXED.
- change: try keyboard-interactive auth with the given password if UserInfo is not given.
- change: working around the wrong auth method list sent by some SSHD 
          in the partial auth success.
- change: working around the CPNI-957037 Plain-text Recovery Attack.
- change: in searching for [host]:non-default port in known_hosts, 
          host:22 should be also checked.
- change: updating copyright messages; 2009 -> 2010

	
Changes since version 0.1.41:
- bugfix: making exec request during re-keying process will cause 
	  the dead lock for the session.                        FIXED.
          Many thanks for PanLi at Prominic dot NET and www.prominic.net, 
	  US based hosting company.  Without their testing JSch with
  	  hundreds of hosts and their bug reports, this problem 
	  was not fixed.
- change: updating copyright messages; 2008 -> 2009	

	
Changes since version 0.1.40:
- bugfix: canceling the remote port-forwarding with the incorrect 
	  bind-address.                                         FIXED.
- bugfix: sftp had missed to close the file in some case.       FIXED.
- bugfix: ls(sftp) will throw an exception for the empty directory
	  in connecting to some sftpd server.                   FIXED.
- change: dropping the session gently in accepting incorrect packets.
- change: by the default, aes128-ctr will be chosen if it is available
	  on the local and the remote.